Fix issue with no bottom white space of Classes page on mobile view

--- a/src/pages/signUpPage/signUpPage.module.scss
+++ b/src/pages/signUpPage/signUpPage.module.scss
@@ -1,3 +1,5 @@
+@import '../../styles/abstracts/variables';
+
 .innerContainer {
   display: flex;
   flex-direction: column;
@@ -17,4 +19,10 @@
   flex-direction: column;
   justify-content: flex-end;
   align-items: center;
+}
+
+@media (min-width: $breakpoint-tablet) {
+  .innerContainer {
+    padding: 0;
+  }
 }
