--- a/src/styles/abstracts/_variables.scss
+++ b/src/styles/abstracts/_variables.scss
@@ -14,7 +14,7 @@ $light-green-transparency: rgb(161, 201, 29);
 $orange: rgba(255, 180, 0, 1);
 
 // Padding top for Slider Cards
-$padding-top-mobile: 80vh;
+$padding-top-mobile: calc(100vh - 151px);
 $padding-top: max(270px, calc(45% - 21px));
 $padding-top-details: max(280px, 30%);
 
